# parser-html

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  example_topic_aware_search.py  example_usage.py  html_parser.py  html_pruner.py  pyproject.toml  pytest.ini  rag_pipeline.py  requirements.txt  sample-search.py  sample-storing.py  test-db.py  test-emb.py  wayback_processor_example.py  wayback_search_example.py
20201130051600/: sluga-narodu.com_.html  sluga-narodu.com_.html.meta.json  sluga-narodu.com_about_.html  sluga-narodu.com_about_.html.meta.json  sluga-narodu.com_about_ideology_.html  sluga-narodu.com_about_ideology_.html.meta.json  sluga-narodu.com_about_istoriia-partii-sluha-narodu_.html  sluga-narodu.com_about_istoriia-partii-sluha-narodu_.html.meta.json  sluga-narodu.com_donate_.html  sluga-narodu.com_donate_.html.meta.json  sluga-narodu.com_join_.html  sluga-narodu.com_join_.html.meta.json  sluga-narodu.com_kontakty_.html  sluga-narodu.com_kontakty_.html.meta.json  sluga-narodu.com_privacy-policy_.html  sluga-narodu.com_privacy-policy_.html.meta.json  sluga-narodu.com_regional_offices_.html  sluga-narodu.com_regional_offices_.html.meta.json
examples/: advanced_search.py  basic_usage.py  batch_processing.py  content_analytics_example.py  performance_monitoring.py  wayback_analysis.py  wayback_analytics_example.py
old_project/: example_usage.py  rag_pipeline.py  test-db.py  text_embedder.py  wayback_processor.py
sample-sites/: tymoshenko_file_1.html  tymoshenko_file_2.html  tymoshenko_file_3.html
src/html_rag/: __init__.py
src/html_rag/analytics/: __init__.py  controversy_detector.py  entity_extractor.py  models.py  sentiment_analyzer.py  statistics_calculator.py  topic_classifier.py  trend_analyzer.py
src/html_rag/cli/: __init__.py  main.py
src/html_rag/core/: __init__.py  config.py  pipeline.py
src/html_rag/data/: controversy_keywords.json  entities_db.json  sentiment_lexicon.json  topic_patterns.json
src/html_rag/exceptions/: __init__.py  pipeline_exceptions.py
src/html_rag/processors/: __init__.py  content_analyzer.py  html_parser.py  semantic_chunker.py  topic_analyzer.py  vector_store.py
src/html_rag/search/: __init__.py  topic_aware_search.py
src/html_rag/utils/: __init__.py  logging.py  metrics.py  validators.py
src/html_rag_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_content_analytics.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_pipeline.py
wayback_chroma_db/b9e54786-fe23-431c-97f5-bd5c77e367fb/: index_metadata.pickle
